# Break-Even-Point

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
ui/: appwindow.slint
